# ComfyUI-ViewCrafter

./: README.md  __init__.py  pyproject.toml
example_workflows/: viewcrafter_dust3r_example.json  viewcrafter_simple_example.json
modules/lvdm/: basics.py
modules/lvdm/modules/: attention.py
modules/lvdm/modules/networks/: openaimodel3d.py
nodes/: apply_viewcrafter_node.py  load_viewcrafter_node.py
utils/: model_utils.py
